--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Steve Mitchell (Of Earth)
 email: Steve@mitchell.earth
-description: Steve Mitchell is a software engineer in Columbus, Ohio
+description: Stuff about Software and Photography
 domain: mitchell.earth
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://mitchell.earth" # the base hostname & protocol for your site, e.g. http://example.com
@@ -28,9 +28,11 @@ twitter_username: thestevemitchel
 github_username:  thestevemitchell
 
 # Build settings
-theme: minima
+remote_theme: pages-themes/cayman@v0.2.0
 plugins:
-  - jekyll-feed
+- jekyll-feed
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
